# baicai

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: model-customization.md
resources/眞白花音偶像服Q版MMD模型/: _读我.txt  眞白花音.pmx  眞白花音_增加腕部骨骼限制.pmx
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ChatBubble.tsx  ChatPanel.tsx  ContextMenu.tsx  MmdPetModel.tsx  Pet.tsx  SettingsPanel.tsx
src/hooks/: useChat.ts  usePetState.ts  useSettings.ts
src/lib/: constants.ts  llm.ts  mmdPetConfig.ts  storage.ts  tauri.ts  types.ts
