[package]
name = "baicai"
version = "0.1.0"
description = "A minimal Tauri desktop app"
authors = ["baicai"]
edition = "2021"

[lib]
name = "baicai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
